--- a/src/main/frontend/src/component/Header.css
+++ b/src/main/frontend/src/component/Header.css
@@ -1,45 +1,31 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-#container_box {
-  display: flex;
-  margin: 0 auto;
-  width: 1440px;
-  height: 100px;
-  align-items: center;
-  max-width: calc(100% - 30px);
-  justify-content: space-between;
+#header {
   position: fixed;
   top: 40px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #ffffff;
-  padding: 0 30px;
-  transition: 0.3s;
-}
-#container_box .container_fix {
-  display: flex;
-  margin: 0 auto;
+  z-index: 1;
+  max-width: calc(100% - 30px);
   width: 1440px;
-  height: 90px;
+  transition: 0.3s;
+  height: 98px;
+  background-color: #ffffff;
+  padding: 18px 0;
+}
+#header .container_fix {
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
   padding: 0 30px;
 }
-#container_box.topbar {
+#header.topbar {
   top: 0;
   width: 100%;
-  height: 90px;
+  padding: 15px 0;
   max-width: 100%;
+  background-color: #ffffff;
 }
-img {
-  width: 180px;
-  height: 48.78px;
+.logo img {
+  height: 60px;
 }
 .nav_menu {
   list-style: none;
@@ -50,9 +36,6 @@ img {
 .nav_menu li {
   padding: 0 40px;
 }
-.nav_menu_line {
-  text-decoration: none;
-}
 .nav_auth {
   display: flex;
   align-items: center;
@@ -61,7 +44,4 @@ img {
   border-right: 1px solid #dbdbdb;
   height: 17px;
   margin: 13px;
-}
-.nav_auth_line {
-  text-decoration: none;
 }
